# remote_task_manager

./: CMakeLists.txt  README.md  RemoteTaskManagement.sln
RemoteTaskManagement/: RemoteTaskManagement.vcxproj  column_items.cpp  column_items.h  remote_task_management.cpp  remote_task_management_frame.cpp  wmi_process.cpp  wmi_process.h  wmi_process_table.cpp  wmi_process_table.h
include/daw/: column_items.h  daw_helpers.h  daw_overload.h  remote_task_management.h  remote_task_management_frame.h  variant_visit.h  wmi_exec.h  wmi_impl.h  wmi_process.h  wmi_process_table.h
src/: column_items.cpp  remote_task_management.cpp  remote_task_management_frame.cpp  wmi_exec.cpp  wmi_impl.cpp  wmi_process.cpp  wmi_process_table.cpp
